<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/search"
        android:icon="@drawable/search2"
        android:title="Search"
        app:showAsAction="ifRoom"
        android:onClick="search"/>
    <item
        android:id="@+id/home"
        android:title="@string/home"
        app:showAsAction="never"
        android:onClick="latesthome">
    </item>

    <item
        android:id="@+id/share"
        android:title="@string/share_app"
        app:showAsAction="never">

    </item>

    <item
        android:id="@+id/feedback"
        android:title="@string/feedback"
        app:showAsAction="never"
        android:onClick="latestfeedback">
    </item>

    <item
        android:id="@+id/exit"
        android:title="@string/exit"
        android:onClick="latestexit"
        app:showAsAction="never">
    </item>
</menu>