<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bag">

    <android.support.v7.widget.CardView
        android:id="@+id/trend_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ripple_boarder">
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/trending_pb"/>

            <ImageView
                android:id="@+id/trending_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:scaleType="fitXY"
                android:contentDescription="@string/movie_name"/>

            <TextView
                android:id="@+id/trend_songlist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/trending_image"
                android:layout_toEndOf="@+id/trending_image"
                android:text="@string/song_name"
                android:textSize="18sp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/black"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/trend_songlist"
                android:layout_centerHorizontal="true"
                android:layout_toEndOf="@+id/trending_image"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/movie_name"
                    android:id="@+id/trending_movie_name"
                    android:textColor="@color/black"

                    android:maxLines="1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dashes"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/writer_name"
                    android:id="@+id/trending_writer_name"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textColor="@color/black"/>

            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/tlll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/one"
            android:text="@string/telugu"
            style="@style/LanguageTextView"
            android:paddingTop="3dp"
            />

        <TextView
            android:id="@+id/two"
            android:paddingTop="3dp"
            android:text="@string/english"
            style="@style/LanguageTextView"
           />

    </LinearLayout>

</LinearLayout>