<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/layotId"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:background="@color/colorAccent"
        android:id="@+id/trending_image"
        android:scaleType="fitXY"
        android:contentDescription="@string/movie_name"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="5dp"
        android:paddingRight="5dp"
        android:paddingLeft="5dp">

        <TextView
            android:id="@+id/trend_songlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/lyric_name"
            android:textSize="18sp"
            android:ellipsize="end"
            android:maxLines="1"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingTop="5dp"
            android:layout_margin="2dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/movie_name"
                android:textAlignment="center"
                android:id="@+id/trending_movie_name"
                android:ellipsize="end"
                android:maxLines="1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dashes" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/writer_name"
                android:textSize="16sp"
                android:id="@+id/trending_writer_name"
                android:ellipsize="end"
                android:maxLines="1"/>
        </LinearLayout>

    </LinearLayout>
    </LinearLayout>


