<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/VerticalLL">

    <android.support.v7.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        app:cardBackgroundColor="@color/bag">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ripple_boarder">
            <ImageView
                android:id="@+id/searhImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:scaleType="fitXY"
                android:contentDescription="@string/movie_name"/>

            <TextView
                android:id="@+id/searchSongName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/searhImage"
                android:layout_toEndOf="@+id/searhImage"

                android:text="@string/song_name"
                android:textSize="18sp"

                android:textColor="@color/black"
                android:ellipsize="end"
                android:maxLines="1"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/searchSongName"
                android:layout_centerHorizontal="true"
                android:layout_toEndOf="@+id/searhImage"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/movie_name"

                    android:textColor="@color/black"
                    android:id="@+id/search_movie_name"

                    android:maxLines="1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/dashes"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/writer_name"

                    android:id="@+id/writerName_writer_name"

                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>